--- a/reactive-forms/src/index.html
+++ b/reactive-forms/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+ <!-- <meta http-equiv="refresh" content="5"> -->
   <meta charset="utf-8">
   <title>ReactiveForms</title>
   <base href="/">
@@ -8,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <!-- <app-root></app-root> -->
-  <app-user></app-user>
+  <app-root></app-root>
+  
 </body>
 </html>
